added line down sidebar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="row">
-        <section class="col-md-2">
+        <section class="col-md-2" id="menu">
             <ul id="menuList">
                 <li id="menuItem">Home</li>
                 <li id="menuItem">Inventory</li>
