--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <th scope="col">Actions</th>
                           </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="pizzaList">
                           <tr>
                             <td>pizza 1</td>
                             <td>15</td>
