--- a/index.html
+++ b/index.html
@@ -297,17 +297,17 @@
                         up</a> </p>
                 <form id="signInForm">
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Email:</label>
-                        <input type="text" class="form-control" id="recipient-name">
+                        <label for="userEmail" class="col-form-label">Email:</label>
+                        <input type="text" class="form-control" id="userEmail">
                     </div>
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Password:</label>
-                        <input type="text" class="form-control" id="recipient-name">
+                        <label for="userPassword" class="col-form-label">Password:</label>
+                        <input type="text" class="form-control" id="userPassword">
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Sign In</button>
+                <button type="button" class="btn btn-primary" id="signIn">Sign In</button>
             </div>
         </div>
     </div>
