--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <!------------------------------HOME PAGE------------------------------>
-    <section class="page" id="homePage">
+    <section class="page display" id="homePage">
         <!--BRAND HEADER-->
         <nav class="navbar navbar sticky-top navbar-dark ">
             <a class="navbar-brand" href="#">
@@ -248,7 +248,7 @@
         </main>
     </section>
 
-    <section class="page display" id="Add/Edit">
+    <section class="page" id="Add/Edit">
         <!--BRAND HEADER-->
         <nav class="navbar navbar sticky-top navbar-dark ">
             <a class="navbar-brand" href="#">
