removed placeholder pizzas

--- a/index.html
+++ b/index.html
@@ -219,29 +219,7 @@
                             <th scope="col">Actions</th>
                           </tr>
                         </thead>
-                        <tbody id="pizzaList">
-                          <tr>
-                            <td>pizza 1</td>
-                            <td>15</td>
-                            <td>false</td>
-                            <td> <button type="button" class="btn btn-dark">Edit</button>
-                                <button type="button" class="btn btn-dark ">Delete</button></td>
-                          </tr>
-                          <tr>
-                            <td>pizza2</td>
-                            <td>10</td>
-                            <td>true</td>
-                            <td> <button type="button" class="btn btn-dark">Edit</button>
-                                <button type="button" class="btn btn-dark">Delete</button></td>
-                          </tr>
-                          <tr>
-                            <td>pizza3</td>
-                            <td>10</td>
-                            <td>false</td>
-                            <td> <button type="button" class="btn btn-dark">Edit</button>
-                            <button type="button" class="btn btn-dark">Delete</button></td>
-                          </tr>
-                        </tbody>
+                        <tbody id="pizzaList"></tbody>
                       </table>
                 </section>
             </div>
