--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
                     <h1 id="text">Change Password</h1>
                     <form id="profileForm">
                         <div class="form-group row">
-                            <label for="staticName" class="col-sm-2 col-form-label">First Name:</label>
+                            <label for="staticFirstName" class="col-sm-2 col-form-label">First Name:</label>
                             <div class="col-sm-10">
                                 <input type="text" readonly class="form-control-plaintext" id="staticFirstName"
                                     value="First Name">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="staticName" class="col-sm-2 col-form-label">Last Name:</label>
+                            <label for="staticLastName" class="col-sm-2 col-form-label">Last Name:</label>
                             <div class="col-sm-5">
                                 <input type="text" readonly class="form-control-plaintext" id="staticLastName"
                                     value="Last Name">
