--- a/index.html
+++ b/index.html
@@ -138,34 +138,34 @@
                 <section class="content col-md-10">
                     <h1 id="text">Change Password</h1>
                     <form id="profileForm">
-                        <div class="form-group row">
+                        <div class="form-group row" id="userProfileContainer">
                             <label for="staticFirstName" class="col-sm-2 col-form-label">First Name:</label>
-                            <div class="col-sm-10">
+                            <div class="col-sm-5">
                                 <input type="text" readonly class="form-control-plaintext" id="staticFirstName"
                                     value="First Name">
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group row" id="userProfileContainer">
                             <label for="staticLastName" class="col-sm-2 col-form-label">Last Name:</label>
                             <div class="col-sm-5">
                                 <input type="text" readonly class="form-control-plaintext" id="staticLastName"
                                     value="Last Name">
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group row" id="userProfileContainer">
                             <label for="staticEmail" class="col-sm-2 col-form-label">Email Placeholder</label>
                             <div class="col-sm-5">
                                 <input type="text" readonly class="form-control-plaintext" id="staticEmail"
                                     value="email@example.com">
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group row" id="userProfileContainer">
                             <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
                             <div class="col-sm-5">
                                 <input type="password" class="form-control" id="newPassword" placeholder="Password">
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group row" id="userProfileContainer">
                             <label for="inputPassword" class="col-sm-2 col-form-label">Retype Password</label>
                             <div class="col-sm-5">
                                 <input type="password" class="form-control" id="retypeNewPassword"
@@ -173,6 +173,7 @@
                             </div>
                         </div>
                     </form>
+                    <button class="btn btn-dark mb-5" id="changePasswordBtn">Submit</button>
                 </section>
             </div>
         </main>
