--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </main>
     </section>
     <!------------------------------ADMIN PIZZA LIST------------------------------>
-    <section class="page" id="admin/pizzas">
+    <section class="page pizzaListContainer" id="admin/pizzas ">
         <!--BRAND HEADER-->
         <nav class="navbar navbar sticky-top navbar-dark ">
             <a class="navbar-brand" href="#">
